fix: update API and Hub URLs to point to the production environment

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -93,7 +93,7 @@
           
           <div class="mb-3">
             <label class="form-label">Hub Endpoint</label>
-            <input type="text" class="form-control" value="https://localhost:7179/hubs/notification" readonly>
+            <input type="text" class="form-control" value="https://profile-moc-test.happyocean-70c0e1b4.uaenorth.azurecontainerapps.io/hubs/notification" readonly>
           </div>
           
           <div class="mb-3">
